--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,34 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
-
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+  <body class="" style="background: #edf2f7;">
+    <main class="">
+      <div class=" bg-gray-100 min-w-screen">
+        <!-- Header Logo Center -->
+        <header class="w-full text-gray-700 bg-white border-t border-gray-100 shadow-sm body-font">
+          <div class="container flex flex-col flex-wrap items-center p-5 mx-auto md:flex-row">
+            <nav class="flex flex-wrap items-center text-base lg:w-2/5 md:ml-auto">
+              <a href="#_" class="mr-5 font-medium hover:text-gray-900">Home</a>
+              <a href="#_" class="mr-5 font-medium hover:text-gray-900">About</a>
+              <a href="#_" class="font-medium hover:text-gray-900">Contact</a>
+            </nav>
+            <a class="flex items-center order-first mb-4 font-medium text-gray-900 lg:order-none lg:w-1/5 title-font lg:items-center lg:justify-center md:mb-0">
+              <svg fill="#00570a" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 297 297" xml:space="preserve" width="64px" height="64px" stroke="#00570a"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <path d="M237.333,33h-50.14c-2.558-18.613-18.556-33-37.86-33s-35.303,14.387-37.86,33h-51.14C50.408,33,42,41.075,42,51v228 c0,9.925,8.408,18,18.333,18h177c9.925,0,17.667-8.075,17.667-18V51C255,41.075,247.258,33,237.333,33z M93.052,48 c3.432,18.033,19.084,31,38.092,31h36.379c19.008,0,34.66-12.967,38.092-31H223v216H75V48H93.052z M149.333,16 c10.456,0,19.242,7.259,21.601,17h-43.201C130.091,23.259,138.877,16,149.333,16z"></path> <rect x="99" y="109" width="50" height="15"></rect> <polygon points="200.689,105.076 189.645,94.924 175.427,110.39 169.237,105.347 159.763,116.976 176.907,130.944 "></polygon> <rect x="99" y="157" width="50" height="15"></rect> <polygon points="200.689,153.076 189.645,142.924 175.427,158.39 169.237,153.347 159.763,164.976 176.907,178.944 "></polygon> <rect x="99" y="205" width="50" height="15"></rect> <polygon points="200.689,201.076 189.645,190.924 175.427,206.39 169.237,201.347 159.763,212.976 176.907,226.944 "></polygon> </g> </g></svg>
+              <span class="text-4xl font-mono subpixel-antialiased font-black">ToDo</span>
+            </a>
+            <div class="inline-flex items-center h-full ml-5 lg:w-2/5 lg:justify-end lg:ml-0">
+              <a href="#_" class="mr-5 font-medium hover:text-gray-900">Login</a>
+              <a href="#_"
+                          class="px-4 py-2 text-xs font-bold text-white uppercase transition-all duration-150 bg-teal-500 rounded shadow outline-none active:bg-teal-600 hover:shadow-md focus:outline-none ease">
+                Sign Up
+              </a>
+            </div>
+          </div>
+        </header>
+      </div>
       <%= yield %>
     </main>
   </body>
