--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-  <body class="" style="background: #edf2f7;">
+  <body class="">
     <main class="">
       <div class=" bg-gray-100 min-w-screen">
         <!-- Header Logo Center -->
@@ -26,7 +26,7 @@
             </a>
             <div class="inline-flex items-center h-full ml-5 lg:w-2/5 lg:justify-end lg:ml-0">
               <a href="#_" class="mr-5 font-medium hover:text-gray-900">Login</a>
-              <a href="#_"
+              <a href="/signup"
                           class="px-4 py-2 text-xs font-bold text-white uppercase transition-all duration-150 bg-teal-500 rounded shadow outline-none active:bg-teal-600 hover:shadow-md focus:outline-none ease">
                 Sign Up
               </a>
@@ -34,7 +34,11 @@
           </div>
         </header>
       </div>
-      <%= yield %>
+      <div class="max-w-full">
+        <div class="container mx-auto">
+          <%= yield %>
+        </div>
+      </div>
     </main>
   </body>
 </html>
